# ReAmped

./: CONTRIBUTING.md  README.md
desktop/: Cargo.toml
desktop/src/: main.rs  visualizer.rs
desktop/src/dsp_ui/: mini_eq.rs  mini_eq_expander.rs  mod.rs
desktop/src/player/: mod.rs  player_app_init.rs  update.rs
desktop/src/ui_elements/: buttons.rs  config_window.rs  cover_view.rs  mini_playlist.rs  mod.rs  music_dirs.rs  order_buttons.rs  search_and_miniplaylist.rs  volume_bar.rs
desktop/src/utils/: background.rs  load_cover.rs  luminance.rs  marquee_text.rs  misc.rs  mod.rs  scan_music_dirs.rs  truncate.rs  visualizer.rs
player-core/: Cargo.toml
player-core/src/: command.rs  config.rs  lib.rs  metadata.rs  player.rs  state.rs  track.rs
player-core/src/audio/: mod.rs  plugins_chain.rs  symphonia_backend.rs  viz_source.rs
player-core/src/builtin_plugins/: meter_lufs.rs  meter_peak.rs  meter_rms.rs  meter_true_peak.rs  meter_vu.rs  mod.rs
player-core/src/dsp/: mini_eq.rs  mod.rs  xpander.rs
player-core/src/viz/: mod.rs  spectrum.rs  waveform.rs
plugin_api/: Cargo.toml
plugin_api/src/: lib.rs
