[package]
name = "player_core"
version = "0.1.0"
edition = "2024"

[dependencies]
plugin_api = { path = "../plugin_api" }
lofty = "0.23.1"
num-complex = "0.4.6"
rustfft = "6.4.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
symphonia = { version = "0.5.5", features = ["all-codecs", "all-formats"] }
cpal = "0.17.1"
rubato = "1.0.1"
audioadapter-buffers = "2.0.0"
ringbuf = "0.2.5"
rand = "0.10.0"
dirs-next = "2.0.0"
toml = "1.0.2"
